refactor: optimisation du code